# udd-skill-bundle

./: .gitignore  README.md  SKILL.md  pyproject.toml
scripts/: approve_flow.py  auth_flow.py  handoff.py  harness.py  precheck.py  record_flow.py  refactor.py  scaffold.py  schedule_install.py  scope.py  validate_loop.py
scripts/lib/: llm_call.py  platform_detect.py  telegram.py  template_render.py
templates/: .gitignore.tmpl  README.md.tmpl  config.yaml.tmpl  pyproject.toml.tmpl  requirements.txt.tmpl  selectors.yaml.tmpl
templates/src/: __init__.py.tmpl  auth.py.tmpl  cli.py.tmpl  download.py.tmpl  healer.py.tmpl  llm_client.py.tmpl  navigate.py.tmpl  notify.py.tmpl  run.py.tmpl  validators.py.tmpl
templates/tests/: test_healer_mock.py.tmpl  test_selectors.py.tmpl  test_validators.py.tmpl
tests/: conftest.py  test_approve_flow.py  test_auth_flow.py  test_e2e_fake_server.py  test_integration_stage0_to_2.py  test_llm_call_fallback.py  test_platform_detect.py  test_precheck.py  test_record_flow.py  test_refactor.py  test_scaffold.py  test_schedule_install.py  test_scope.py  test_template_render.py  test_validate_loop.py
tests/fixtures/: fake_server.py  harness_answers.json
